# manifestor

./: Cargo.toml
src/: lib.rs  main.rs
src/api/: mod.rs
src/cache/: mod.rs
src/manifest/: mod.rs
src/types/: mod.rs
