[package]
name = "manifestor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
once_cell = "1.21.3"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
